--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue": "^2.5.17",
         "vue-router": "^3.0.2",
         "vue-template-compiler": "^2.6.8",
-        "vuex": "^3.1.0"
+        "vuex": "^3.1.0",
+        "vuex-persistedstate": "^2.5.4"
     }
 }
